--- a/receita-6/index.html
+++ b/receita-6/index.html
@@ -3,13 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="styles/style-index.css" rel="stylesheet">
+    <title>Receita 06 Programming Web</title>
 </head>
 <body>
-    <title>
-        Receita 06 Programming Web
-    </title>
-
     <div id="test">
         <button id="loadButton">
             <h1>Load Beers</h1>
@@ -22,67 +18,76 @@
         </button>
     </div>
     <div id="printBeers">
+        <table id="beersTable" style="width: 100%; border-collapse: collapse; display: none;">
+            <thead>
+                <tr>
+                    <th style="border: 1px solid #000;">Nome</th>
+                    <th style="border: 1px solid #000;">Álcool</th>
+                </tr>
+            </thead>
+            <tbody id="beersTableBody"></tbody>
+        </table>
     </div>
 
-</body>   
+    <script>
+        let beers = [
+            { "name": "Brahma", "alcoholContent": "4.8 %"},
+            { "name": "Skol", "alcoholContent": "4.7 %"},
+            { "name": "Antarctica", "alcoholContent": "4.9 %"},
+            { "name": "Bohemia", "alcoholContent": "5.0 %"},
+            { "name": "Budweiser", "alcoholContent": "5.0 %"},
+            { "name": "Stella Artois", "alcoholContent": "5.2 %"},
+            { "name": "Becks", "alcoholContent": "5.0 %"},
+            { "name": "Corona", "alcoholContent": "4.5 %"},
+            { "name": "Patagonia", "alcoholContent": "5.4 %"},
+            { "name": "Serramalte", "alcoholContent": "5.5 %"},
+            { "name": "Colorado", "alcoholContent": "5.2 %"},
+            { "name": "Leffe", "alcoholContent": "6.6 %"},
+            { "name": "Hoegaarden", "alcoholContent": "4.9 %"},
+            { "name": "Cervejaria Wäls", "alcoholContent": "5.6 %"},
+            { "name": "Michelob Ultra", "alcoholContent": "4.2 %"},
+            { "name": "Quilmes", "alcoholContent": "4.9 %"}
+        ];
 
-<script>
-    let beers = [
-        { "name": "Brahma", "alcoholContent": "4.8 %"},
-        { "name": "Skol", "alcoholContent": "4.7 %"},
-        { "name": "Antarctica", "alcoholContent": "4.9 %"},
-        { "name": "Bohemia", "alcoholContent": "5.0 %"},
-        { "name": "Budweiser", "alcoholContent": "5.0 %"},
-        { "name": "Stella Artois", "alcoholContent": "5.2 %"},
-        { "name": "Becks", "alcoholContent": "5.0 %"},
-        { "name": "Corona", "alcoholContent": "4.5 %"},
-        { "name": "Patagonia", "alcoholContent": "5.4 %"},
-        { "name": "Serramalte", "alcoholContent": "5.5 %"},
-        { "name": "Colorado", "alcoholContent": "5.2 %"},
-        { "name": "Leffe", "alcoholContent": "6.6 %"},
-        { "name": "Hoegaarden", "alcoholContent": "4.9 %"},
-        { "name": "Cervejaria Wäls", "alcoholContent": "5.6 %"},
-        { "name": "Michelob Ultra", "alcoholContent": "4.2 %"},
-        { "name": "Quilmes", "alcoholContent": "4.9 %"}
-    ];
+        const loadDiv = () => {
+            const table = document.getElementById("beersTable");
+            const button = document.getElementById("loadButton");
 
-
-
-    const loadDiv = () => {
-        const div = document.getElementById("printBeers");
-        const button = document.getElementById("loadButton");
-
-        if (div.innerHTML.trim() === "") {
-            renderBeers(beers);
-            button.querySelector("h1").textContent = "Unload Beers";
-        } else {
-            document.querySelectorAll(".fade").forEach(el => el.classList.remove("show"));
-            setTimeout(() => div.innerHTML = "", 300);
-            button.querySelector("h1").textContent = "Load Beers";
+            if (table.style.display === "none") {
+                renderBeers(beers);
+                table.style.display = "table"; // Mostra a tabela
+                button.querySelector("h1").textContent = "Unload Beers";
+            } else {
+                document.getElementById("beersTableBody").innerHTML = ""; // Limpa a tabela
+                table.style.display = "none"; // Oculta a tabela
+                button.querySelector("h1").textContent = "Load Beers";
+            }
         }
-    }
 
-    const renderBeers = (list) => {
-        const div = document.getElementById("printBeers");
-        const beersHtml = list.map(({name,alcoholContent}) => `<div id="beers" class="beers fade">${name} ${alcoholContent}</div>`);
-        div.innerHTML = beersHtml.join("\n");
-        document.querySelectorAll(".fade").forEach(el => {
-            setTimeout(() => el.classList.add("show"), 10);
-        });
-    }
+        const renderBeers = (list) => {
+            const tbody = document.getElementById("beersTableBody");
+            tbody.innerHTML = ""; // Limpa o corpo da tabela
 
-    const sortBeers = () => {
-        beers = beers.sort((a, b) => a.name.localeCompare(b.name));
-        renderBeers(beers);
-    }
+            const beersHtml = list.map(({ name, alcoholContent }) => 
+                `<tr><td style="border: 1px solid #000;">${name}</td><td style="border: 1px solid #000;">${alcoholContent}</td></tr>`
+            );
 
-    const shuffleBeers = () => {
-        beers = beers.sort(() => Math.random() - 0.5); 
-        renderBeers(beers);  
-    }
+            tbody.innerHTML = beersHtml.join("\n");
+        }
 
-    document.getElementById("loadButton").addEventListener("click", loadDiv);
-    document.getElementById("sortBeer").addEventListener("click", sortBeers);
-    document.getElementById("shuffleBeers").addEventListener("click", shuffleBeers);
-</script>
+        const sortBeers = () => {
+            beers = beers.sort((a, b) => a.name.localeCompare(b.name));
+            renderBeers(beers);
+        }
+
+        const shuffleBeers = () => {
+            beers = beers.sort(() => Math.random() - 0.5); 
+            renderBeers(beers);  
+        }
+
+        document.getElementById("loadButton").addEventListener("click", loadDiv);
+        document.getElementById("sortBeer").addEventListener("click", sortBeers);
+        document.getElementById("shuffleBeers").addEventListener("click", shuffleBeers);
+    </script>
+</body>
 </html>
