--- a/receita-6/index.html
+++ b/receita-6/index.html
@@ -23,6 +23,8 @@
                 <tr>
                     <th style="border: 1px solid #000;">Nome</th>
                     <th style="border: 1px solid #000;">Álcool</th>
+                    <th style="border: 1px solid #000;">Style</th>
+                    <th style="border: 1px solid #000;">IBU</th>
                 </tr>
             </thead>
             <tbody id="beersTableBody"></tbody>
@@ -31,22 +33,22 @@
 
     <script>
         let beers = [
-            { "name": "Brahma", "alcoholContent": "4.8 %"},
-            { "name": "Skol", "alcoholContent": "4.7 %"},
-            { "name": "Antarctica", "alcoholContent": "4.9 %"},
-            { "name": "Bohemia", "alcoholContent": "5.0 %"},
-            { "name": "Budweiser", "alcoholContent": "5.0 %"},
-            { "name": "Stella Artois", "alcoholContent": "5.2 %"},
-            { "name": "Becks", "alcoholContent": "5.0 %"},
-            { "name": "Corona", "alcoholContent": "4.5 %"},
-            { "name": "Patagonia", "alcoholContent": "5.4 %"},
-            { "name": "Serramalte", "alcoholContent": "5.5 %"},
-            { "name": "Colorado", "alcoholContent": "5.2 %"},
-            { "name": "Leffe", "alcoholContent": "6.6 %"},
-            { "name": "Hoegaarden", "alcoholContent": "4.9 %"},
-            { "name": "Cervejaria Wäls", "alcoholContent": "5.6 %"},
-            { "name": "Michelob Ultra", "alcoholContent": "4.2 %"},
-            { "name": "Quilmes", "alcoholContent": "4.9 %"}
+            { "name": "Brahma", "alcoholContent": "4.8 %", "style": "Lager", "ibu": "18" },
+            { "name": "Skol", "alcoholContent": "4.7 %", "style": "Pilsen", "ibu": "15" },
+            { "name": "Antarctica", "alcoholContent": "4.9 %", "style": "Cream Ale", "ibu": "20" },
+            { "name": "Bohemia", "alcoholContent": "5.0 %", "style": "Red Ale", "ibu": "25" },
+            { "name": "Budweiser", "alcoholContent": "5.0 %", "style": "Lager", "ibu": "10" },
+            { "name": "Stella Artois", "alcoholContent": "5.2 %", "style": "Pilsen", "ibu": "22" },
+            { "name": "Becks", "alcoholContent": "5.0 %", "style": "APA", "ibu": "30" },
+            { "name": "Corona", "alcoholContent": "4.5 %", "style": "Lager", "ibu": "12" },
+            { "name": "Patagonia", "alcoholContent": "5.4 %", "style": "Red Ale", "ibu": "27" },
+            { "name": "Serramalte", "alcoholContent": "5.5 %", "style": "English IPA", "ibu": "40" },
+            { "name": "Colorado", "alcoholContent": "5.2 %", "style": "Imperial Stout", "ibu": "50" },
+            { "name": "Leffe", "alcoholContent": "6.6 %", "style": "Belgian Ale", "ibu": "26" },
+            { "name": "Hoegaarden", "alcoholContent": "4.9 %", "style": "Witbier", "ibu": "15" },
+            { "name": "Cervejaria Wäls", "alcoholContent": "5.6 %", "style": "Pilsen", "ibu": "30" },
+            { "name": "Michelob Ultra", "alcoholContent": "4.2 %", "style": "Lager", "ibu": "10" },
+            { "name": "Quilmes", "alcoholContent": "4.9 %", "style": "Cream Ale", "ibu": "18" }
         ];
 
         const loadDiv = () => {
@@ -68,8 +70,13 @@
             const tbody = document.getElementById("beersTableBody");
             tbody.innerHTML = ""; // Limpa o corpo da tabela
 
-            const beersHtml = list.map(({ name, alcoholContent }) => 
-                `<tr><td style="border: 1px solid #000;">${name}</td><td style="border: 1px solid #000;">${alcoholContent}</td></tr>`
+            const beersHtml = list.map(({ name, alcoholContent, style, ibu }) => 
+                `<tr>
+                    <td style="border: 1px solid #000;">${name}</td>
+                    <td style="border: 1px solid #000;">${alcoholContent}</td>
+                    <td style="border: 1px solid #000;">${style}</td>
+                    <td style="border: 1px solid #000;">${ibu}</td>
+                </tr>`
             );
 
             tbody.innerHTML = beersHtml.join("\n");
