--- a/receita-6/index.html
+++ b/receita-6/index.html
@@ -43,12 +43,12 @@
             { "name": "Quilmes", "alcoholContent": "4.9 %", "style": "Cream Ale", "ibu": "18" }
         ];
 
-        const loadDiv = (targetId = "cervejasDiv", headers = ["Nome", "Álcool", "Estilo", "Amargor"]) => {
+        const loadDiv = (targetId = "cervejasDiv", headers = ["Nome", "Álcool", "Estilo", "Amargor"], properties = ["name", "alcoholContent", "style", "ibu"]) => {
             const targetElement = document.getElementById(targetId);
             const button = document.getElementById("loadButton");
 
             if (targetElement && targetElement.innerHTML === "") {
-                renderBeers(beers, targetId, headers);
+                renderBeers(beers, targetId, headers, properties);
                 button.querySelector("h1").textContent = "Unload Beers";
             } else {
                 targetElement.innerHTML = ""; // Limpa o conteúdo do elemento
@@ -56,7 +56,7 @@
             }
         }
 
-        const renderBeers = (list, targetId = "cervejasDiv", headers = ["Nome", "Álcool", "Estilo", "Amargor"]) => {
+        const renderBeers = (list, targetId = "cervejasDiv", headers = ["Nome", "Álcool", "Estilo", "Amargor"], properties = ["name", "alcoholContent", "style", "ibu"]) => {
             const targetElement = document.getElementById(targetId);
             if (!targetElement) return;
 
@@ -65,19 +65,13 @@
                 <table style="width: 100%; border-collapse: collapse;">
                     <thead>
                         <tr>
-                            <th style="border: 1px solid #000;">${headers[0]}</th>
-                            <th style="border: 1px solid #000;">${headers[1]}</th>
-                            <th style="border: 1px solid #000;">${headers[2]}</th>
-                            <th style="border: 1px solid #000;">${headers[3]}</th>
+                            ${headers.map(header => `<th style="border: 1px solid #000;">${header}</th>`).join("")}
                         </tr>
                     </thead>
                     <tbody>
-                        ${list.map(({ name, alcoholContent, style, ibu }) => 
+                        ${list.map(item => 
                             `<tr>
-                                <td style="border: 1px solid #000;">${name}</td>
-                                <td style="border: 1px solid #000;">${alcoholContent}</td>
-                                <td style="border: 1px solid #000;">${style}</td>
-                                <td style="border: 1px solid #000;">${ibu}</td>
+                                ${properties.map(prop => `<td style="border: 1px solid #000;">${item[prop] || ""}</td>`).join("")}
                             </tr>`
                         ).join("\n")}
                     </tbody>
