--- a/receita-6/index.html
+++ b/receita-6/index.html
@@ -50,7 +50,7 @@
                 renderBeers(beers, targetId, headers, properties);
                 button.querySelector("h1").textContent = "Unload Beers";
             } else {
-                targetElement.innerHTML = ""; // Limpa o conteúdo do elemento
+                targetElement.innerHTML = "";
                 button.querySelector("h1").textContent = "Load Beers";
             }
         }
