--- a/receita-7/index.html
+++ b/receita-7/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Receita 06 Programming Web</title>
+    <link href="styles/style-index.css" rel="stylesheet">
+    <title>Receita 07 Programming Web</title>
 </head>
 <body>
     <div id="test">
@@ -18,58 +19,68 @@
         </button>
     </div>
     <div id="printBeers">
-        <div id="cervejasDiv">
+        <div id="beersDiv">
         </div>
     </div>
 
     <script>
-        let beers = [
-            { "name": "Brahma", "alcoholContent": "4.8 %", "style": "Lager", "ibu": "18" },
-            { "name": "Skol", "alcoholContent": "4.7 %", "style": "Pilsen", "ibu": "15" },
-            { "name": "Antarctica", "alcoholContent": "4.9 %", "style": "Cream Ale", "ibu": "20" },
-            { "name": "Bohemia", "alcoholContent": "5.0 %", "style": "Red Ale", "ibu": "25" },
-            { "name": "Budweiser", "alcoholContent": "5.0 %", "style": "Lager", "ibu": "10" },
-            { "name": "Stella Artois", "alcoholContent": "5.2 %", "style": "Pilsen", "ibu": "22" },
-            { "name": "Becks", "alcoholContent": "5.0 %", "style": "APA", "ibu": "30" },
-            { "name": "Corona", "alcoholContent": "4.5 %", "style": "Lager", "ibu": "12" },
-            { "name": "Patagonia", "alcoholContent": "5.4 %", "style": "Red Ale", "ibu": "27" },
-            { "name": "Serramalte", "alcoholContent": "5.5 %", "style": "English IPA", "ibu": "40" },
-            { "name": "Colorado", "alcoholContent": "5.2 %", "style": "Imperial Stout", "ibu": "50" },
-            { "name": "Leffe", "alcoholContent": "6.6 %", "style": "Belgian Ale", "ibu": "26" },
-            { "name": "Hoegaarden", "alcoholContent": "4.9 %", "style": "Witbier", "ibu": "15" },
-            { "name": "Cervejaria Wäls", "alcoholContent": "5.6 %", "style": "Pilsen", "ibu": "30" },
-            { "name": "Michelob Ultra", "alcoholContent": "4.2 %", "style": "Lager", "ibu": "10" },
-            { "name": "Quilmes", "alcoholContent": "4.9 %", "style": "Cream Ale", "ibu": "18" }
-        ];
+        let beers = [];
 
-        const loadDiv = (targetId = "cervejasDiv", headers = ["Nome", "Álcool", "Estilo", "Amargor"], properties = ["name", "alcoholContent", "style", "ibu"]) => {
+        const loadDiv = (targetId = "beersDiv", headers = ["Nome", "Álcool", "Estilo", "Amargor"], properties = ["name", "alcoholContent", "style", "ibu"]) => {
             const targetElement = document.getElementById(targetId);
             const button = document.getElementById("loadButton");
 
-            if (targetElement && targetElement.innerHTML === "") {
+            const isLoaded = button.getAttribute("data-loaded") === "true";
+
+            if (!isLoaded) {
                 renderBeers(beers, targetId, headers, properties);
                 button.querySelector("h1").textContent = "Unload Beers";
+                button.setAttribute("data-loaded", "true");
             } else {
-                targetElement.innerHTML = ""; // Limpa o conteúdo do elemento
+                targetElement.innerHTML = "";
                 button.querySelector("h1").textContent = "Load Beers";
+                button.setAttribute("data-loaded", "false");
             }
         }
 
-        const renderBeers = (list, targetId = "cervejasDiv", headers = ["Nome", "Álcool", "Estilo", "Amargor"], properties = ["name", "alcoholContent", "style", "ibu"]) => {
+        async function loadBeers () {
+            const beersDiv = document.getElementById("beersDiv");
+            const button = document.getElementById("loadButton");
+
+            const isLoaded = button.getAttribute("data-loaded") === "true";
+
+            if (isLoaded) {
+                beersDiv.innerHTML = "";
+                button.querySelector("h1").textContent = "Load Beers";
+                button.setAttribute("data-loaded", "false");
+                beers = [];
+            } else {
+                try{
+                    let res = await fetch("https://random-data-api.com/api/v2/beers?size=25");
+                    beers = await res.json();
+                    loadDiv("beersDiv");
+                }catch(err){
+                    document.getElementById("beersDiv").innerHTML = "ERROR!!!";
+                }
+            }
+        }
+
+
+        const renderBeers = (list, targetId = "beersDiv", headers = ["Álcool", "BLG", "Brand", "HOP", "IBU", "ID", "Malte", "Nome", "Estilo", "UID", "Ano"], properties = ["alcohol", "blg", "brand", "hop", "ibu", "id", "malts", "name", "style", "uid", "yeast"]) => {
             const targetElement = document.getElementById(targetId);
             if (!targetElement) return;
 
             const tableHtml = `
-                <table style="width: 100%; border-collapse: collapse;">
+                <table>
                     <thead>
                         <tr>
-                            ${headers.map(header => `<th style="border: 1px solid #000;">${header}</th>`).join("")}
+                            ${headers.map(header => `<th>${header}</th>`).join("")}
                         </tr>
                     </thead>
                     <tbody>
                         ${list.map(item => 
                             `<tr>
-                                ${properties.map(prop => `<td style="border: 1px solid #000;">${item[prop] || ""}</td>`).join("")}
+                                ${properties.map(prop => `<td>${item[prop] || ""}</td>`).join("")}
                             </tr>`
                         ).join("\n")}
                     </tbody>
@@ -80,16 +91,24 @@
         }
 
         const sortBeers = () => {
+            if (beers.length === 0) {
+                document.getElementById("beersDiv").innerHTML = "ERROR!!!";
+                return;
+            }
             beers = beers.sort((a, b) => a.name.localeCompare(b.name));
             renderBeers(beers);
         }
 
         const shuffleBeers = () => {
+            if (beers.length === 0) {
+                document.getElementById("beersDiv").innerHTML = "ERROR!!!";
+                return;
+            }
             beers = beers.sort(() => Math.random() - 0.5); 
             renderBeers(beers);  
         }
 
-        document.getElementById("loadButton").addEventListener("click", () => loadDiv());
+        document.getElementById("loadButton").addEventListener("click", loadBeers);
         document.getElementById("sortBeer").addEventListener("click", sortBeers);
         document.getElementById("shuffleBeers").addEventListener("click", shuffleBeers);
     </script>
