--- a/receita-7/index.html
+++ b/receita-7/index.html
@@ -26,7 +26,7 @@
     <script>
         let beers = [];
 
-        const loadDiv = (targetId = "beersDiv", headers = ["Nome", "Álcool", "Estilo", "Amargor"], properties = ["name", "alcoholContent", "style", "ibu"]) => {
+        const loadDiv = (targetId = "beersDiv", headers = ["ID","Brand","Nome","Estílo","HOP","Ano","Malte","IBU","Álcool","BLG"], properties = ["id","brand","name","style","hop","yeast","malts","ibu","alcohol","blg"]) => {
             const targetElement = document.getElementById(targetId);
             const button = document.getElementById("loadButton");
 
