--- a/receita-7/index.html
+++ b/receita-7/index.html
@@ -66,7 +66,7 @@
         }
 
 
-        const renderBeers = (list, targetId = "beersDiv", headers = ["Álcool", "BLG", "Brand", "HOP", "IBU", "ID", "Malte", "Nome", "Estilo", "UID", "Ano"], properties = ["alcohol", "blg", "brand", "hop", "ibu", "id", "malts", "name", "style", "uid", "yeast"]) => {
+        const renderBeers = (list, targetId = "beersDiv", headers = ["ID","Brand","Nome","Estílo","HOP","Ano","Malte","IBU","Álcool","BLG"], properties = ["id","brand","name","style","hop","yeast","malts","ibu","alcohol","blg"]) => {
             const targetElement = document.getElementById(targetId);
             if (!targetElement) return;
 
