--- a/receita-9/index.html
+++ b/receita-9/index.html
@@ -3,95 +3,65 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Receita 06 Programming Web</title>
+    <link href="styles/style-index.css" rel="stylesheet">
+    <title>Receita 09 Programming Web</title>
 </head>
-<body>
-    <div id="test">
-        <button id="loadButton">
-            <h1>Load Beers</h1>
-        </button>
-        <button id="sortBeer">
-            <h1>Sort Beers</h1>
-        </button>
-        <button id="shuffleBeers">
-            <h1>Shuffle Beers</h1>
-        </button>
-    </div>
-    <div id="printBeers">
-        <div id="cervejasDiv">
-        </div>
-    </div>
 
-    <script>
-        let beers = [
-            { "name": "Brahma", "alcoholContent": "4.8 %", "style": "Lager", "ibu": "18" },
-            { "name": "Skol", "alcoholContent": "4.7 %", "style": "Pilsen", "ibu": "15" },
-            { "name": "Antarctica", "alcoholContent": "4.9 %", "style": "Cream Ale", "ibu": "20" },
-            { "name": "Bohemia", "alcoholContent": "5.0 %", "style": "Red Ale", "ibu": "25" },
-            { "name": "Budweiser", "alcoholContent": "5.0 %", "style": "Lager", "ibu": "10" },
-            { "name": "Stella Artois", "alcoholContent": "5.2 %", "style": "Pilsen", "ibu": "22" },
-            { "name": "Becks", "alcoholContent": "5.0 %", "style": "APA", "ibu": "30" },
-            { "name": "Corona", "alcoholContent": "4.5 %", "style": "Lager", "ibu": "12" },
-            { "name": "Patagonia", "alcoholContent": "5.4 %", "style": "Red Ale", "ibu": "27" },
-            { "name": "Serramalte", "alcoholContent": "5.5 %", "style": "English IPA", "ibu": "40" },
-            { "name": "Colorado", "alcoholContent": "5.2 %", "style": "Imperial Stout", "ibu": "50" },
-            { "name": "Leffe", "alcoholContent": "6.6 %", "style": "Belgian Ale", "ibu": "26" },
-            { "name": "Hoegaarden", "alcoholContent": "4.9 %", "style": "Witbier", "ibu": "15" },
-            { "name": "Cervejaria Wäls", "alcoholContent": "5.6 %", "style": "Pilsen", "ibu": "30" },
-            { "name": "Michelob Ultra", "alcoholContent": "4.2 %", "style": "Lager", "ibu": "10" },
-            { "name": "Quilmes", "alcoholContent": "4.9 %", "style": "Cream Ale", "ibu": "18" }
-        ];
-
-        const loadDiv = (targetId = "cervejasDiv", headers = ["Nome", "Álcool", "Estilo", "Amargor"], properties = ["name", "alcoholContent", "style", "ibu"]) => {
-            const targetElement = document.getElementById(targetId);
-            const button = document.getElementById("loadButton");
-
-            if (targetElement && targetElement.innerHTML === "") {
-                renderBeers(beers, targetId, headers, properties);
-                button.querySelector("h1").textContent = "Unload Beers";
-            } else {
-                targetElement.innerHTML = ""; // Limpa o conteúdo do elemento
-                button.querySelector("h1").textContent = "Load Beers";
-            }
-        }
-
-        const renderBeers = (list, targetId = "cervejasDiv", headers = ["Nome", "Álcool", "Estilo", "Amargor"], properties = ["name", "alcoholContent", "style", "ibu"]) => {
-            const targetElement = document.getElementById(targetId);
-            if (!targetElement) return;
-
-            const tableHtml = `
-                <table style="width: 100%; border-collapse: collapse;">
-                    <thead>
-                        <tr>
-                            ${headers.map(header => `<th style="border: 1px solid #000;">${header}</th>`).join("")}
-                        </tr>
-                    </thead>
-                    <tbody>
-                        ${list.map(item => 
-                            `<tr>
-                                ${properties.map(prop => `<td style="border: 1px solid #000;">${item[prop] || ""}</td>`).join("")}
-                            </tr>`
-                        ).join("\n")}
-                    </tbody>
-                </table>
-            `;
-
-            targetElement.innerHTML = tableHtml;
-        }
-
-        const sortBeers = () => {
-            beers = beers.sort((a, b) => a.name.localeCompare(b.name));
-            renderBeers(beers);
-        }
-
-        const shuffleBeers = () => {
-            beers = beers.sort(() => Math.random() - 0.5); 
-            renderBeers(beers);  
-        }
-
-        document.getElementById("loadButton").addEventListener("click", () => loadDiv());
-        document.getElementById("sortBeer").addEventListener("click", sortBeers);
-        document.getElementById("shuffleBeers").addEventListener("click", shuffleBeers);
-    </script>
-</body>
+   <body>
+      <div id="app"></div>
+      <script src="libs/react.js"></script>
+      <script src="libs/react-dom.js"></script>
+      <script>
+         ReactDOM.render(
+            React.createElement(
+               'div',
+               null,
+               [
+                  React.createElement('h1', null, 'Table With React!'),
+                  React.createElement(
+                     'Table',
+                     {border: '1'},
+                     [
+                        React.createElement(
+                           'thead',
+                           null,
+                           React.createElement(
+                              'tr',
+                              null,
+                              [
+                                 React.createElement('th', { key: 'th1' }, 'Column 1'),
+                                 React.createElement('th', { key: 'th2' }, 'Column 2'),
+                              ]
+                           )
+                        ),
+                        React.createElement(
+                           'tbody',
+                           null,
+                           [
+                              React.createElement(
+                                 'tr',
+                                 { key: 'row1' },
+                                 [
+                                    React.createElement('td', { key: 'r1c1' }, 'Line 1 - Cell 1'),
+                                    React.createElement('td', { key: 'r1c2' }, 'Line 1 - Cell 2'),
+                                 ]
+                              ),
+                              React.createElement(
+                                 'tr',
+                                 { key: 'row2' },
+                                 [
+                                    React.createElement('td', { key: 'r2c1' }, 'Line 2 - Cell 1'),
+                                    React.createElement('td', { key: 'r2c2' }, 'Line 2 - Cell 2'),
+                                 ]
+                              ),
+                           ]
+                        ),
+                     ]
+                  ),
+               ]
+            ),
+            document.getElementById('app')
+         );
+      </script>
+   </body>
 </html>
