--- a/receita-10/index.html
+++ b/receita-10/index.html
@@ -15,8 +15,8 @@
       <script src="libs/babel.js"></script>
    
       <script type="text/babel">
-         ReactDOM.render(
-            <div id="app">
+         function TabelaBebidas() {
+            return (
                <table id="tabela" border="1">
                   <thead>
                      <tr>
@@ -31,6 +31,13 @@
                      </tr>
                   </tbody>
                </table>
+            );
+         }
+
+         ReactDOM.render(
+            <div id="app">
+               <h1>Tabela de Bebidas</h1>
+               {TabelaBebidas()}
             </div>,
             document.getElementById("app")
          );
