--- a/receita-10/index.html
+++ b/receita-10/index.html
@@ -15,10 +15,14 @@
       <script src="libs/babel.js"></script>
    
       <script type="text/babel">
+         function Cabecalho() {
+            return <h1>Minha tabela de bebidas</h1>;
+         }
+
          function TabelaBebidas() {
             return (
                <div id="app">
-                  <h1>Tabela de Bebidas</h1>
+                  <Cabecalho />
                   <table id="tabela" border="1">
                      <thead>
                         <tr>
