--- a/receita-10/index.html
+++ b/receita-10/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width" />
       <link href="styles/style-index.css" rel="stylesheet">
-      <title>Receita 10 Programming Web</title>
+      <title>Tabela de Cachaças</title>
    </head>
 
    <body>
@@ -16,35 +16,51 @@
    
       <script type="text/babel">
          function Cabecalho() {
-            return <h1>Minha tabela de bebidas</h1>;
+            return <h1>Minha tabela de cachaças</h1>;
          }
+
+         const cachacas = [
+            { nome: "Havana", marca: "Engenho Anísio Santiago" },
+            { nome: "Seleta", marca: "Engenho São João Batista" },
+            { nome: "Boazinha", marca: "Engenho Boa Vista" },
+         ];
 
          function TabelaBebidas() {
             return (
-               <div id="app">
+               <table id="tabela" border="1">
+                  <thead>
+                     <tr>
+                        <th>Nome</th>
+                        <th>Marca</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     {cachacas.map((cachaca, index) => (
+                        <tr key={index}>
+                           <td>{cachaca.nome}</td>
+                           <td>{cachaca.marca}</td>
+                        </tr>
+                     ))}
+                  </tbody>
+               </table>
+            );
+         }
+
+         function App() {
+            const [mostrarTabela, setMostrarTabela] = React.useState(false);
+
+            return (
+               <div>
                   <Cabecalho />
-                  <table id="tabela" border="1">
-                     <thead>
-                        <tr>
-                           <th>Nome</th>
-                           <th>Marca</th>
-                        </tr>
-                     </thead>
-                     <tbody>
-                        <tr>
-                           <td>Havana</td>
-                           <td>Engenho Anísio Santiago</td>
-                        </tr>
-                     </tbody>
-                  </table>
+                  <button onClick={() => setMostrarTabela(true)}>
+                     Mostrar Tabela
+                  </button>
+                  {mostrarTabela && <TabelaBebidas />}
                </div>
             );
          }
 
-         ReactDOM.render(
-            <TabelaBebidas />,
-            document.getElementById("app")
-         );
+         ReactDOM.render(<App />, document.getElementById("app"));
       </script>
    </body>
 </html>
