--- a/receita-10/index.html
+++ b/receita-10/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width" />
       <link href="styles/style-index.css" rel="stylesheet">
-      <title>Tabela de Cachaças</title>
+      <title>Receita 10 Programming Web</title>
    </head>
 
    <body>
